--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,25 @@ html{
     text-align: center;
 }
 
-img{
-    width: 3em;
+body{
+    margin: 0;
+}
+
+nav img{
+    width: 5em;
 }
 
 /* Text */
 
+p, h1, h2, h3, h4{
+    margin: 0;
+}
+
 p{
     font-family: "Acme", sans-serif;
     color: var(--clr-text);
-    margin-bottom: 0.85em;
+    margin-bottom: 0.7em;
+    font-size: 1.5rem;
 }
 
 ul{
@@ -37,27 +46,191 @@ ul{
 h1, h2, h3{
     font-family: 'Potta One', cursive;
     color: var(--clr-accent);
+    margin-bottom: 0.4em;
 }
 
 .nav-btn, .footer-nav-btn{
     font-family: 'Shadows Into Light', cursive;
     color: var(--clr-accent);
-    font-size: 1.5rem;
-}
-
-p, h1, h2, h3, h4{
-    margin: 0;
-}
-
-a{
     text-decoration: none;
+    font-size: 2rem;
+}
+
+.nav-btn-black{
+    font-family: 'Shadows Into Light', cursive;
+    color: var(--clr-primary);
+    text-decoration: none;
+    font-size: 4rem;
+}
+
+.border-red{
+    border:1px solid rgb(158, 17, 17);
+    padding: 0.1em;
 }
 
 /* Template styles */
 
 /* Navigation */
 
+.fill{
+    display: inline-block;
+    width: 100%;
+    height: 5.5em;
+}
+
+nav{
+    display: grid;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    background-color: var(--clr-primary);
+    padding-top:  0.5em;
+    padding-left: 0.5em;
+}
+
+nav ul{
+    display: none;
+}
+
+nav .logo{
+    grid-row: 1/2 span;
+    grid-column: 1/2 span;
+}
+
+nav .grid-item{
+    grid-row: 1;
+}
+
+.grid-item img{
+    padding: 1em;
+}
+
+.nav-empty{
+    grid-column: 3/50;
+    grid-row: 1/2;
+}
+
+/* Naviation Menu */
+
+.nav-toggle{
+    display: none;
+}
+
+nav label{
+    cursor: pointer;
+}
+
+.nav-toggle:checked ~ .nav-menu ul{
+    display: flex;
+}
+
+.nav-menu ul{
+    display: none;
+    /* display: flex; */
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding-bottom: 7em
+}
+
+.nav-menu 
+
 /* Footer */
+.footer-section{
+    padding: 1em;
+}
 
 
+.footer-logo{
+    max-width: 15em;
+}
 
+footer h3{
+    font-size: 2rem;
+}
+
+hr{
+    border-color: rgb(158, 17, 17);
+    margin: 1em;
+    margin-bottom: 2em;
+}
+
+.nav-social ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.social-link{
+    margin: 0.3em;
+}
+
+.social-link img{
+    max-width: 3em;
+}
+
+/* For wide screens */
+
+@media screen and (min-width: 800px) {
+
+    /* Navigation */
+
+    .grid-item{
+        display: none;
+    }
+
+    nav ul{
+        display: flex;
+        height: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    nav .cart{
+        grid-row: 1;
+    }
+    
+    .cart img{
+        padding: 1em;
+    }
+
+    /* Footer */
+
+    .footer{
+        margin-top: 2em;
+        display: grid;
+        grid-auto-flow: column;
+        text-align: left;
+    }
+
+    #footer-logo{
+        text-align: center;
+    }
+
+    #footer-logo img{
+        max-width: 100%;
+    }
+
+    .bottom{
+        display: grid;
+        grid-auto-flow: column
+    }
+
+    .bottom p{
+        margin-bottom: 0;
+        margin-top: 0.5em;
+        vertical-align: middle;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    .nav-empty{
+        grid-column: 25/50;
+    }
+}
